<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flash_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.FlashcardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/flash_text_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flash_no_card"
                android:textAlignment="center"
                android:textIsSelectable="true"
                android:textSize="44sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <View
                android:id="@+id/flash_divider"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/flash_blocker" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/flash_text_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flash_no_card"
                android:textAlignment="center"
                android:textIsSelectable="true"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/flash_button_wrong"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/flash_wrong"
                android:insetLeft="6dp"
                android:insetRight="3dp"
                android:text="@string/flash_wrong"
                android:textAllCaps="true"
                android:textSize="24sp" />

            <Button
                android:id="@+id/flash_button_right"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/flash_right"
                android:insetLeft="3dp"
                android:insetRight="6dp"
                android:text="@string/flash_right"
                android:textAllCaps="true"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <Button
            android:id="@+id/flash_button_reveal"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:backgroundTint="@color/flash_blocker"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/flash_blocker"
            android:textSize="80sp"
            app:cornerRadius="0dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>