...
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

        <Button
            android:id="@+id/lor_button_learn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:text="@string/lor_learn"
            android:textSize="30sp" />

...
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

        <Button
            android:id="@+id/lor_button_review"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:text="@string/lor_review"
            android:textSize="30sp" />

...
